@@ -2,14 +2,15 @@ package io.dropwizard.servlets.assets;
 
 import com.google.common.base.MoreObjects;
 import com.google.common.io.Resources;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
 
 public class WebAssetServlet extends AssetServlet {
+    private static Logger logger = LoggerFactory.getLogger(WebAssetServlet.class.getName());
+
     public WebAssetServlet(String resourcePath, String uriPath, String indexFile, Charset defaultCharset) {
         super(resourcePath, uriPath, indexFile, defaultCharset);
     }
@@ -19,9 +20,9 @@ public class WebAssetServlet extends AssetServlet {
         URL url = loader.getResource(absoluteRequestedResourcePath);
         if (url == null) {
             try {
-                File base = new File(getResourceURL().toURI());
-                return new File(base, getIndexFile()).toURI().toURL();
-            } catch (URISyntaxException | MalformedURLException e) {
+                return new URL(getResourceURL(), getIndexFile());
+            } catch (Exception e) {
+                logger.error("Couldn't serve " + absoluteRequestedResourcePath, e);
                 throw new RuntimeException(e);
             }
         }
